--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,7 @@ body {
     min-height: 100vh;
     height: 100%;
     box-sizing: border-box;
+    max-width: 100vw;
 }
 
 
